--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 body{
-	margin-left: 70px;
-	margin-right: 70px;
+	margin-left: 160px;
+	margin-right: 170px;
+	background-color: grey;
 }
+.wrapper {
+		margin: 20px;
+    background-color: white;
+	}
 
 h1 {
 	text-align: center;
@@ -18,6 +23,11 @@ margin-top: 33px;
 margin-bottom: 34px;
 }
 .prof {
-	padding-top: 20px;
-
+	padding-top: 7px;
+}
+p {
+padding: 4px;
+}
+a{
+	padding: 5px;
 }
