--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,116 @@
+* {
+	margin: 0;
+	padding: 0;
+}
 body{
-	margin-left: 160px;
-	margin-right: 170px;
-	background-color: grey;
+	font-family: Tahoma, Arial, sans-serif;
 }
-.wrapper {
-		margin: 20px;
-    background-color: white;
-	}
+.wrapper{
+	margin: 0 auto;
+	padding: 0 46px;
+	width: 968px;
+	background: #fff;
+-webkit-box-shadow: 0px 0px 4px 0px rgba(204,204,204,1);
+-moz-box-shadow: 0px 0px 4px 0px rgba(204,204,204,1);
+box-shadow: 0px 0px 4px 0px rgba(204,204,204,1);
+}
 
-h1 {
+.header{
+padding-top: 50px;
+margin-bottom: 40px;
+}
+.menu{
+position: relative;
+overflow: hidden;
+margin-top: 40px;
+background: #505050; 
+background: -moz-linear-gradient(top,  #505050 6%, #323232 100%); 
+background: -webkit-linear-gradient(top,  #505050 6%,#323232 100%); 
+background: linear-gradient(to bottom,  #505050 6%,#323232 100%); 
+}
+.menu li{
+	list-style: none;
+	float: left;
+}
+.menu a{
+	display: block;
+	color: white;
+	line-height: 40px;
+	padding: 0 40px;
+	text-decoration: none;
+  font-size: 15px;
+}
+.menu a:hover{
+	background: #111010;
+}
+.content{
+	position: relative;
+	overflow: hidden;
+}
+.sidebar{
+   float: left;
+   width: 240px;
+   
+}
+.side-menu{
+border: 1px solid #c8c8c8;
+}
+.side-menu a{
+	padding-left: 20px;
+	line-height: 37px;
+	color:#949494;
+	text-decoration: none;
+	transition: 0.2s all;
+}
+
+
+
+/*.side-menu li:first-child{
+	border: none;
+}*/
+.side-menu li{
+	border-bottom: 1px solid #c8c8c8;
+
+}
+.side-menu a:hover{
+	color: #656363;
+	padding-left: 35px;
+}
+.product{
+	float: right;
+	width: 680px;
+}
+.product-imag{
+	/*padding: 40px 0;*/
+	border: 1px solid #c8c8c8;
 	text-align: center;
-	margin-top: 30px;
 }
-figure {
-	  display: block; 
-    text-align: center; 
-    margin-top: 0; 
-    margin-bottom: 5px;   
+.product p{
+padding: 30px 22px 0 22px;
+line-height: 21px;
+font-size: 13px;
+color: #2c2c2c;
 }
-hr {
-margin-top: 33px;
-margin-bottom: 34px;
+.footer{
+padding: 50px 0;
 }
-.prof {
-	padding-top: 7px;
+.footer-menu{
+	position: relative;
+	overflow: hidden;
+	background: #e1e1e1;
 }
-p {
-padding: 4px;
+.footer-menu li{
+float: left;
+list-style: none;
 }
-a{
-	padding: 5px;
+.footer-menu .copyrights{
+	float: right;
+	padding-right: 26px;
+}
+.footer-menu  a{
+	display: block;
+	padding: 0 50px;
+	line-height: 40px;
+	color: #2c2c2c;
+	text-decoration: none;
 }
